--- a/public/main.html
+++ b/public/main.html
@@ -1083,34 +1083,28 @@
             <h1 class="mdc-typography--headline">Add Class</h1>
             <form id="alchemy-class-add__form" class="mdc-layout-grid__inner" onsubmit=" ">
 
-              <!-- Class Level -->
-              <div id="alchemy-class-add__level" class="mdc-select mdc-layout-grid__cell--span-4"
-                   role="listbox">
-                <div class="mdc-select__surface" tabindex="0">
-                  <div class="mdc-select__label"></div>
-                  <div class="mdc-select__selected-text"></div>
-                  <div class="mdc-select__bottom-line"></div>
+              <!-- Class Level & Division-->
+              <div class="mdc-layout-grid__cell--span-4">
+                <div id="alchemy-class-add__class-level-division"
+                     class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
+                  <input type="text" id="alchemy-class-add__class-level-division--input" class="mdc-text-field__input"
+                         aria-controls="name-validation-message" autocomplete="off" required minlength=3>
+                  <label for="alchemy-course-add__course-alias--input" class="mdc-floating-label">Level &
+                    Division</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
                 </div>
-                <div class="mdc-menu mdc-select__menu">
-                  <ul class="mdc-list mdc-menu__items">
-                  </ul>
-                </div>
+                <p id="alchemy-class-add__class-level-division--validation-msg"
+                   class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg" aria-hidden="false">
+                  Required.
+                </p>
               </div>
-              <!-- Class Division -->
-              <div id="alchemy-class-add__division" class="mdc-select mdc-layout-grid__cell--span-4"
-                   role="listbox">
-                <div class="mdc-select__surface" tabindex="0">
-                  <div class="mdc-select__label"></div>
-                  <div class="mdc-select__selected-text"></div>
-                  <div class="mdc-select__bottom-line"></div>
-                </div>
-                <div class="mdc-menu mdc-select__menu">
-                  <ul class="mdc-list mdc-menu__items">
-                  </ul>
-                </div>
-              </div>
-              <!-- Class Default-class -->
-              <div id="alchemy-class-add__default-class" class="mdc-select mdc-layout-grid__cell--span-4"
+              <!-- Class Location - Default-class -->
+              <div id="alchemy-class-add__class-location" class="mdc-select mdc-layout-grid__cell--span-4"
                    role="listbox">
                 <div class="mdc-select__surface" tabindex="0">
                   <div class="mdc-select__label"></div>
@@ -1123,7 +1117,7 @@
                 </div>
               </div>
               <!-- Class Branch -->
-              <div id="alchemy-class-add__Branch" class="mdc-select mdc-layout-grid__cell--span-4"
+              <div id="alchemy-class-add__class-department" class="mdc-select mdc-layout-grid__cell--span-4"
                    role="listbox">
                 <div class="mdc-select__surface" tabindex="0">
                   <div class="mdc-select__label"></div>
@@ -1227,25 +1221,33 @@
             <form id="alchemy-designation-add__form" class="mdc-layout-grid__inner" onsubmit=" ">
 
               <!-- Designation Name-->
-              <div id="alchemy-designation-add__name" class="mdc-select mdc-layout-grid__cell--span-4"
-                   role="listbox">
-                <div class="mdc-select__surface" tabindex="0">
-                  <div class="mdc-select__label"></div>
-                  <div class="mdc-select__selected-text"></div>
-                  <div class="mdc-select__bottom-line"></div>
+              <div class="mdc-layout-grid__cell--span-4">
+                <div id="alchemy-designation-add__designation-name"
+                     class="mdc-text-field mdc-text-field--outlined mdc-layout-grid__cell--span-8 mdc-text-field--focused">
+                  <input type="text" id="alchemy-designation-add__designation-name--input" class="mdc-text-field__input"
+                         aria-controls="name-validation-message" required minlength=2 autocomplete="off">
+                  <label for="alchemy-designation-add__designation-name--input" class="mdc-floating-label">Designation Name</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
                 </div>
-                <div class="mdc-menu mdc-select__menu">
-                  <ul class="mdc-list mdc-menu__items">
-                  </ul>
-                </div>
+                <p id="alchemy-designation-add__designation-name--validation-msg"
+                   class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg" aria-hidden="false">
+                  Required.
+                </p>
               </div>
               <!-- Designation Hours-->
-              <div class="mdc-layout-grid__cell--span-3">
+              <div class="mdc-layout-grid__cell--span-4">
                 <div id="alchemy-designation-add__designation-hours"
                      class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
-                  <input type="number" id="alchemy-designation-add__designation-hours--input" class="mdc-text-field__input"
+                  <input type="number" id="alchemy-designation-add__designation-hours--input"
+                         class="mdc-text-field__input"
                          aria-controls="name-validation-message" autocomplete="off" required min="1" step="1">
-                  <label for="alchemy-designation-add__designation-hours--input" class="mdc-floating-label">Designation Hours</label>
+                  <label for="alchemy-designation-add__designation-hours--input" class="mdc-floating-label">Designation
+                    Hours</label>
                   <div class="mdc-notched-outline">
                     <svg>
                       <path class="mdc-notched-outline__path"/>
@@ -1259,8 +1261,8 @@
                 </p>
               </div>
 
-              <!-- Class Default-designation -->
-              <div id="alchemy-designation-add__default-program" class="mdc-select mdc-layout-grid__cell--span-4"
+              <!-- Designation Programme -->
+              <div id="alchemy-designation-add__designation-programme" class="mdc-select mdc-layout-grid__cell--span-4"
                    role="listbox">
                 <div class="mdc-select__surface" tabindex="0">
                   <div class="mdc-select__label"></div>
@@ -1271,22 +1273,6 @@
                   <ul class="mdc-list mdc-menu__items">
                   </ul>
                 </div>
-              </div>
-              <!-- Class Branch -->
-              <div id="alchemy-designation-add__Branch" class="mdc-select mdc-layout-grid__cell--span-4"
-                   role="listbox">
-                <div class="mdc-select__surface" tabindex="0">
-                  <div class="mdc-select__label"></div>
-                  <div class="mdc-select__selected-text"></div>
-                  <div class="mdc-select__bottom-line"></div>
-                </div>
-                <div class="mdc-menu mdc-select__menu">
-                  <ul class="mdc-list mdc-menu__items">
-                  </ul>
-                </div>
-              </div>
-              <!-- Action button fix --span-8 -->
-              <div id="alchemy-designation-add__div-fix" class="mdc-layout-grid__cell--span-8">
               </div>
               <div class="mdc-layout-grid__cell--span-6 ">
                 <button id="alchemy-designation-add__add-button" class="mdc-button mdc-button--raised"
@@ -1300,7 +1286,7 @@
                 </button>
               </div>
               <div class="mdc-layout-grid__cell--span-6 mdc-layout-grid--align-right">
-                <button id="alchemy-class-add__view-button" class="mdc-button" type="">
+                <button id="alchemy-designation-add__view-button" class="mdc-button" type="">
                   <i class="material-icons mdc-button__icon">remove_red_eye</i>
                   VIEW DESIGNATION
                 </button>
@@ -1310,8 +1296,144 @@
         </div>
       </div>
 
+      <!--
+/*
+|--------------------------------------------------------------------------
+| Department View
+|--------------------------------------------------------------------------
+*/
+-->
+      <div id="alchemy-department-view" class="mdc-layout-grid__inner">
+        <div class="mdc-card mdc-layout-grid__cell--span-12">
+          <section class="mdc-card__primary">
+            <h1 class="mdc-typography--headline">View Department</h1>
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell--span-3"></div>
+              <div class="mdc-layout-grid__cell--span-9 mdc-layout-grid--align-right">
+                <button id="alchemy-department-view__add-button"
+                        class="mdc-button">
+                  <i class="material-icons mdc-button__icon">add</i>
+                  Add Department
+                </button>
+                <button id="alchemy-department-view__edit-button"
+                        class="mdc-button" disabled>
+                  <i class="material-icons mdc-button__icon">edit</i>
+                  Edit Department
+                </button>
+                <button id="alchemy-department-view__delete-button"
+                        class="mdc-button" disabled>
+                  <i class="material-icons mdc-button__icon">clear</i>
+                  Delete Department
+                </button>
+              </div>
+            </div>
+            <br/>
+            <div class="mdc-layout-grid__inner">
+              <div class="mdc-layout-grid__cell--span-12">
+                <div id="alchemy-department-view__table" class="mdc-data-table">
+                  <table class="mdc-data-table__content">
+                    <thead>
 
+                    </thead>
+                    <tbody>
 
+                    </tbody>
+                  </table>
+                  <div class="empty-table">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+
+      <!--
+      /*
+        |--------------------------------------------------------------------------
+        | Department Add
+        |--------------------------------------------------------------------------
+        */
+      -->
+      <div id="alchemy-department-add" class="mdc-layout-grid__inner">
+        <div class="mdc-card mdc-layout-grid__cell--span-12">
+          <section class="mdc-card__primary">
+            <h1 class="mdc-typography--headline">Add Department</h1>
+            <form id="alchemy-department-add__form" class="mdc-layout-grid__inner" onsubmit=" ">
+              <!-- Department Name-->
+              <div class="mdc-layout-grid__cell--span-4">
+                <div id="alchemy-department-add__department-name"
+                     class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
+                  <input type="text" id="alchemy-department-add__department-name--input" class="mdc-text-field__input"
+                         aria-controls="name-validation-message" autocomplete="off" required minlength=3>
+                  <label for="alchemy-course-add__course-alias--input" class="mdc-floating-label">Level &
+                    Division</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
+                </div>
+                <p id="alchemy-department-add__department-name--validation-msg"
+                   class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg" aria-hidden="false">
+                  Required.
+                </p>
+              </div>
+              <!-- Department Alias-->
+              <div class="mdc-layout-grid__cell--span-4">
+                <div id="alchemy-department-add__department-alias"
+                     class="mdc-text-field mdc-text-field--outlined mdc-text-field--focused">
+                  <input type="text" id="alchemy-department-add__department-alias--input" class="mdc-text-field__input"
+                         aria-controls="name-validation-message" autocomplete="off" required minlength=3>
+                  <label for="alchemy-department-add__department-alias--input" class="mdc-floating-label">Department
+                    Alias</label>
+                  <div class="mdc-notched-outline">
+                    <svg>
+                      <path class="mdc-notched-outline__path"/>
+                    </svg>
+                  </div>
+                  <div class="mdc-notched-outline__idle"></div>
+                </div>
+                <p id="alchemy-department-add__department-alias--validation-msg"
+                   class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg" aria-hidden="false">
+                  Required.
+                </p>
+              </div>
+              <!-- Department Program-id -->
+              <div id="alchemy-department-add__default-programme" class="mdc-select mdc-layout-grid__cell--span-4"
+                   role="listbox">
+                <div class="mdc-select__surface" tabindex="0">
+                  <div class="mdc-select__label"></div>
+                  <div class="mdc-select__selected-text"></div>
+                  <div class="mdc-select__bottom-line"></div>
+                </div>
+                <div class="mdc-menu mdc-select__menu">
+                  <ul class="mdc-list mdc-menu__items">
+                  </ul>
+                </div>
+              </div>
+              <div class="mdc-layout-grid__cell--span-6 ">
+                <button id="alchemy-department-add__add-button" class="mdc-button mdc-button--raised"
+                        type="button">
+                  <i class="material-icons mdc-button__icon">done</i>
+                  ADD DEPARTMENT
+                </button>
+                <button id="alchemy-department-add__reset-button" class="mdc-button" type="reset">
+                  <i class="material-icons mdc-button__icon">undo</i>
+                  RESET FIELDS
+                </button>
+              </div>
+              <div class="mdc-layout-grid__cell--span-6 mdc-layout-grid--align-right">
+                <button id="alchemy-department-add__view-button" class="mdc-button" type="">
+                  <i class="material-icons mdc-button__icon">remove_red_eye</i>
+                  VIEW DEPARTMENT
+                </button>
+              </div>
+            </form>
+          </section>
+        </div>
+      </div>
     </section>
   </main>
   <div class="mdc-layout-grid mdc-theme--primary-dark-bg mdc-theme--text-disabled-on-dark">
