--- a/public/main.html
+++ b/public/main.html
@@ -96,13 +96,13 @@
     <div class="mdc-toolbar__section--align-start my-modified-toolbar-section">
       <nav id="dynamic-tab-bar" class="mdc-tab-bar custom-indicator-tab-bar-in-toolbar" role="tablist">
         <a role="tab" aria-controls="courses"
-           class="mdc-tab mdc-tab--active">Course</a>
+           class="mdc-tab">Course</a>
         <a role="tab" aria-controls="panel-2"
            class="mdc-tab">Faculty</a>
         <a role="tab" aria-controls="panel-2"
            class="mdc-tab">Location</a>
         <a role="tab" aria-controls="panel-4"
-           class="mdc-tab">Course Offered</a>
+           class="mdc-tab mdc-tab--active">Course Offered</a>
         <a role="tab" aria-controls="panel-3"
            class="mdc-tab">Time Table</a>
         <a role="tab" aria-controls="panel-3"
@@ -119,7 +119,7 @@
 <section id="alchemy-body" style="display: none;">
   <main class="mdc-toolbar-fixed-adjust panels">
     <!-- SECTION Course-->
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="alchemy-courses"
+    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="alchemy-courses"
              role="tabpanel"
              aria-hidden="false">
       <!--
@@ -910,7 +910,7 @@
     </section>
 
     <!-- SECTION Course Offered-->
-    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel" id="alchemy-course-offered"
+    <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="alchemy-course-offered"
              role="tabpanel">
       <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="panel-4" role="tabpanel">
         <div class="mdc-layout-grid__inner">
@@ -938,10 +938,6 @@
         </div>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-card mdc-layout-grid__cell--span-4">
-            <ul id="alchemy-course-offered__list" class="mdc-list mdc-list--two-line">
-            </ul>
-          </div>
-          <div class="mdc-card mdc-layout-grid__cell--span-8">
             <!-- Auto-complete example -->
             <div id="alchemy-course-offered__courses"
                  class="mdc-text-field mdc-text-field--box mdc-layout-grid__cell--span-6">
@@ -954,6 +950,10 @@
               <ul class="mdc-list mdc-menu__items">
               </ul>
             </div>
+            <ul id="alchemy-course-offered__list" class="mdc-list mdc-list--two-line">
+            </ul>
+          </div>
+          <div class="mdc-card mdc-layout-grid__cell--span-8">
           </div>
         </div>
       </section>
