--- a/public/main.html
+++ b/public/main.html
@@ -58,6 +58,14 @@
   <script src="js/vendor/mdc-handler.js"></script>
 </head>
 <body class="mdc-typography">
+<div class="alchemy-loading-bar mdc-linear-progress mdc-linear-progress--indeterminate" role="progressbar">
+  <div class="mdc-linear-progress__buffering-dots"></div>
+  <div class="mdc-linear-progress__buffer"></div>
+  <div class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"><span
+    class="mdc-linear-progress__bar-inner"></span></div>
+  <div class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"><span
+    class="mdc-linear-progress__bar-inner"></span></div>
+</div>
 <div id="loading-overlay">
   Loading...
 </div>
