Replace old access token method

--- a/public/main.html
+++ b/public/main.html
@@ -50,8 +50,7 @@
   <!-- User Interface Stylesheet -->
   <link rel="stylesheet" href="css/ui.css">
 
-  <!-- Access Token: TODO: Replace this with an actual solution. -->
-  <script src="js/access-token.js"></script>
+  <!-- Access Control -->
   <script src="js/alchemy/AccessControl.js"></script>
 
   <!-- Custom JS for handling mdc -->
