--- a/public/main.html
+++ b/public/main.html
@@ -915,7 +915,7 @@
       </div>
 
     </section>
-
+    <!-- SECTION Course Offered -->
     <section class="mdc-layout-grid mdc-layout-grid--fixed-column-width panel active" id="panel-4" role="tabpanel">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-card mdc-layout-grid__cell--span-12">
@@ -941,13 +941,13 @@
         </div>
       </div>
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-card mdc-layout-grid__cell--span-4">
+        <div id="alchemy-course-offered__course-list-section" class="mdc-card mdc-layout-grid__cell--span-4">
           <!-- Auto-complete example -->
           <div id="alchemy-course-offered__courses"
                class="mdc-text-field mdc-text-field--box mdc-layout-grid__cell--span-6">
             <i class="material-icons alchemy-select__cancel" tabindex="0">cancel</i>
             <input type="text" id="alchemy-course-offered__courses--input" class="mdc-text-field__input">
-            <label class="mdc-floating-label" for="my-text-field">Select course</label>
+            <label class="mdc-floating-label" for="my-text-field">Offer new course</label>
             <div class="mdc-line-ripple"></div>
           </div>
           <div id="alchemy-course-offered__courses--menu" class="mdc-menu mdc-select__menu">
@@ -957,7 +957,224 @@
           <ul id="alchemy-course-offered__list" class="mdc-list mdc-list--two-line">
           </ul>
         </div>
-        <div class="mdc-card mdc-layout-grid__cell--span-8">
+        <div id="alchemy-course-offered__course-setting-section" class="mdc-card mdc-layout-grid__cell--span-8">
+          <span id="alchemy-course-offered__course-detail" class="mdc-typography--body1">Course Name</span>
+          <h1 id="alchemy-course-offered__course-name" class="mdc-typography--headline">Course Name</h1>
+          <div id="alchemy-course-offered__lecture-section" class="mdc-layout-grid__inner">
+            <span
+              class="mdc-typography--subtitle1 mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--no-gap mdc-layout-grid__cell--align-middle">Lecture:</span>
+            <div id="alchemy-course-offered__lecture-faculty"
+                 class="mdc-text-field mdc-text-field--box mdc-layout-grid__cell--span-6">
+              <i class="material-icons alchemy-select__cancel" tabindex="0">cancel</i>
+              <input type="text" id="alchemy-course-offered__lecture-faculty--input" class="mdc-text-field__input">
+              <label class="mdc-floating-label" for="my-text-field">Select lecture faculty</label>
+              <div class="mdc-line-ripple"></div>
+            </div>
+            <div id="alchemy-course-offered__lecture-location"
+                 class="mdc-text-field mdc-text-field--box mdc-layout-grid__cell--span-6">
+              <i class="material-icons alchemy-select__cancel" tabindex="0">cancel</i>
+              <input type="text" id="alchemy-course-offered__lecture-location--input" class="mdc-text-field__input">
+              <label class="mdc-floating-label" for="my-text-field">Select lecture location</label>
+              <div class="mdc-line-ripple"></div>
+            </div>
+            <div id="alchemy-course-offered__lecture-faculty-second"
+                 class="mdc-text-field mdc-text-field--box mdc-layout-grid__cell--span-6"
+                 style="display: none; margin-top: -16px;"> <!-- TODO: remove inline style -->
+              <i class="material-icons alchemy-select__cancel" tabindex="0">cancel</i>
+              <input type="text" id="alchemy-course-offered__lecture-faculty-second-input"
+                     class="mdc-text-field__input">
+              <label class="mdc-floating-label" for="my-text-field">Select lecture faculty 2</label>
+              <div class="mdc-line-ripple"></div>
+            </div>
+          </div>
+          <div id="alchemy-course-offered__practical-section" class="mdc-layout-grid__inner">
+            <span
+              class="mdc-typography--subtitle1 mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--no-gap mdc-layout-grid__cell--align-middle">Practical:</span>
+            <!-- Batch Radio START -->
+            <div id="alchemy-course-offered__practical-batch"
+                 class="mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--no-gap mdc-layout-grid__cell--align-middle">
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__practical-batch-0" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__practical-batch--radio-batch-0"
+                         name="alchemy-course-offered__practical-batch--radio-batch-0" value="0" checked>
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__practical-batch--label-batch-0"
+                       for="alchemy-course-offered__practical-batch--radio-batch-0">Common location</label>
+              </div>
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__practical-batch-1" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__practical-batch--radio-batch-1"
+                         name="alchemy-course-offered__practical-batch--radio-batch-1" value="1">
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__practical-batch--label-batch-1"
+                       for="alchemy-course-offered__practical-batch--radio-batch-1">A</label>
+              </div>
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__practical-batch-2" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__practical-batch--radio-batch-2"
+                         name="alchemy-course-offered__practical-batch--radio-batch-2" value="2">
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__practical-batch--label-batch-2"
+                       for="alchemy-course-offered__practical-batch--radio-batch-2">B</label>
+              </div>
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__practical-batch-3" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__practical-batch--radio-batch-3"
+                         name="alchemy-course-offered__practical-batch--radio-batch-3" value="3">
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__practical-batch--label-batch-3"
+                       for="alchemy-course-offered__practical-batch--radio-batch-3">C</label>
+              </div>
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__practical-batch-4" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__practical-batch--radio-batch-4"
+                         name="alchemy-course-offered__practical-batch--radio-batch-4" value="4">
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__practical-batch--label-batch-4"
+                       for="alchemy-course-offered__practical-batch--radio-batch-4">D</label>
+              </div>
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__practical-batch-5" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__practical-batch--radio-batch-5"
+                         name="alchemy-course-offered__practical-batch--radio-batch-5" value="5">
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__practical-batch--label-batch-5"
+                       for="alchemy-course-offered__practical-batch--radio-batch-5">E</label>
+              </div>
+            </div>
+            <!-- Batch Radio END -->
+            <div id="alchemy-course-offered__practical-location"
+                 class="mdc-text-field mdc-text-field--box mdc-layout-grid__cell--span-6">
+              <i class="material-icons alchemy-select__cancel" tabindex="0">cancel</i>
+              <input type="text" id="alchemy-course-offered__practical-location--input" class="mdc-text-field__input">
+              <label class="mdc-floating-label" for="my-text-field">Select practical location</label>
+              <div class="mdc-line-ripple"></div>
+            </div>
+          </div>
+          <div id="alchemy-course-offered__tutorial-section" class="mdc-layout-grid__inner">
+          <span
+            class="mdc-typography--subtitle1 mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--no-gap mdc-layout-grid__cell--align-middle">Tutorial:</span>
+            <!-- Batch Radio START -->
+            <div id="alchemy-course-offered__tutorial-batch"
+                 class="mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--no-gap mdc-layout-grid__cell--align-middle">
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__tutorial-batch-0" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__tutorial-batch--radio-batch-0"
+                         name="alchemy-course-offered__tutorial-batch--radio-batch-0" value="0" checked>
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__tutorial-batch--label-batch-0"
+                       for="alchemy-course-offered__tutorial-batch--radio-batch-0">Common location</label>
+              </div>
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__tutorial-batch-1" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__tutorial-batch--radio-batch-1"
+                         name="alchemy-course-offered__tutorial-batch--radio-batch-1" value="1">
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__tutorial-batch--label-batch-1"
+                       for="alchemy-course-offered__tutorial-batch--radio-batch-1">A</label>
+              </div>
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__tutorial-batch-2" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__tutorial-batch--radio-batch-2"
+                         name="alchemy-course-offered__tutorial-batch--radio-batch-2" value="2">
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__tutorial-batch--label-batch-2"
+                       for="alchemy-course-offered__tutorial-batch--radio-batch-2">B</label>
+              </div>
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__tutorial-batch-3" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__tutorial-batch--radio-batch-3"
+                         name="alchemy-course-offered__tutorial-batch--radio-batch-3" value="3">
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__tutorial-batch--label-batch-3"
+                       for="alchemy-course-offered__tutorial-batch--radio-batch-3">C</label>
+              </div>
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__tutorial-batch-4" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__tutorial-batch--radio-batch-4"
+                         name="alchemy-course-offered__tutorial-batch--radio-batch-4" value="4">
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__tutorial-batch--label-batch-4"
+                       for="alchemy-course-offered__tutorial-batch--radio-batch-4">D</label>
+              </div>
+              <div class="mdc-form-field">
+                <div id="alchemy-course-offered__tutorial-batch-5" class="mdc-radio">
+                  <input class="mdc-radio__native-control" type="radio"
+                         id="alchemy-course-offered__tutorial-batch--radio-batch-5"
+                         name="alchemy-course-offered__tutorial-batch--radio-batch-5" value="5">
+                  <div class="mdc-radio__background">
+                    <div class="mdc-radio__outer-circle"></div>
+                    <div class="mdc-radio__inner-circle"></div>
+                  </div>
+                </div>
+                <label id="alchemy-course-offered__tutorial-batch--label-batch-5"
+                       for="alchemy-course-offered__tutorial-batch--radio-batch-5">E</label>
+              </div>
+            </div>
+            <!-- Batch Radio END -->
+            <div id="alchemy-course-offered__tutorial-location"
+                 class="mdc-text-field mdc-text-field--box mdc-layout-grid__cell--span-6">
+              <i class="material-icons alchemy-select__cancel" tabindex="0">cancel</i>
+              <input type="text" id="alchemy-course-offered__tutorial-location--input" class="mdc-text-field__input">
+              <label class="mdc-floating-label" for="my-text-field">Select tutorial location</label>
+              <div class="mdc-line-ripple"></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
